<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>frontier_mapping</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="344248024@qq.com">dji</maintainer>
  <license>TODO: License declaration</license>

<depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>message_filters</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
